css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --primary-col: rgb(163,163,163);
    --secondary-col: rgb(8,11,18);
}

body {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: rgb(20,25,34);
}

a {
    text-decoration: none;
}

.mini-sidebar-container {
    display: flex;
    justify-content: center;
}

.bottom-navbar {
    position: relative;
    height: 80px;
}

.all-container {
    flex-grow: 1;
    display: flex;
}

.sidebar {
    width: 80px;
    /*Indicativo, da verificare*/
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    color: var(--primary-col);
    background-color: black;
}

.sidebar h2 {
    color: white;
}

.main-container {
    flex-grow: 1;
}

.no-shrink {
    flex-shrink: 0;
}

.playlist-container {
    overflow: auto;
    flex-grow: 1;
}

.titolo-butt {
    font-size: 1.4rem;
}

.playlist-button {
    display: flex;
    vertical-align: middle;
}

.playlist-button i {
    font-size: 2rem;
    color: black;
    background-color: var(--primary-col);
}

.playlist a,
.sidebar-container-bottom a,
.corner-footer a {
    text-decoration: none;
    color: var(--primary-col);
}

.playlist li {
    margin-top: 2rem
}

.logogrande-testo {
    display: flex;
}

.sidebar .playlist {
    display: none;
    padding-left: 8px;
}

.lista-sidebar-top {
    list-style: none;
}

.lista-sidebar-top a {
    color: var(--primary-col);
    display: flex;
    padding: .6rem;
    justify-content: center;
}

.logo-sidebar img {
    width: 25px;
}

.logo-small {
    display: block
}

.logo-large {
    display: none;
}

.sidebar .text-sidebar {
    display: none;
}

.sidebar-container-bottom {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: .6rem;
}

.mini-sidebar-container {
    align-items: center;
}

.mini-sidebar-container img {
    width: 20px;
}

.mini-sidebar-container .text-sidebar {
    margin-left: 10px;
}

/* .circle {
    border-radius: 50%;
    width: 20px;
    height: 20px;
    padding: 10px;
} */

.sidebar hr {
    margin: 5px 0;
    width: 70%;
    opacity: 0;
}

.barra-upgrade {
    width: 100%;
    display: flex;
    height: 65px;
    position: fixed;
    background-color: var(--secondary-col);
}

.btn-upgrade {
    margin: .2rem 0;
    padding: 1rem 0;
    position: absolute;
    right: 85px;
    background-color: var(--secondary-col);
    border-radius: 25px;
    border: 1px solid white;
}

.btn-upgrade a {
    color: white;
}

.container-sections {
    overflow: auto;
    margin-top: 80px;
    background-color: rgb(20,25,34);
}

.container-sections h2 {
    margin-top: .7rem;
    font-size: 1.1rem;
    color: white;
}

.container-sections .mid-title {
    margin-top: 30px;
}

.container-sections h5 {
    margin-top: 7px;
    font-size: .9rem;
    color: var(--primary-col);
}

.row-category {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: .2rem;
    row-gap: .5rem;
}

.row-category li {
    list-style: none;
}

.col-category {
    text-align: center;
    font-size: .9rem;
    flex-basis: calc(100% / 4 - .8rem);
}

.text-category {
    color: var(--primary-col);
}

.col-category hr {
    background-color: rgb(20,25,34);
    margin: 0 auto;
    width: 25%;
    height: 1px;
    border: none;
}

.col-category hr {
    margin-top: 3px;
    padding-top: 2px;
    background-color: rgb(173,255,47);
}

.blocco-mid .row {
    column-gap: .7rem;
    display: flex;
    flex-wrap: wrap;
}

.row .col {
    flex-basis: calc(50% - 0.7rem);
    flex-shrink: 1;
}

.img-card-container {
    position: relative;
}

.img-card-container img {
    display: block;
    width: 100%;
}

.col .card {
    margin: .6rem 0;
    text-align: center;
}

.card .img-card-container i {
    font-size: 80px;
    display: none;
    color: white;
    position: absolute;
    top: 35%;
    left: 35%;
}

/* SOPRA QUESTO COMMENTO METTERE LE CARATTERISTICHE DEL MAIN */
.bottom-fix {
    position: fixed;
    width: 100%;
    bottom: 0px;
    height: 80px;
    display: flex;
    justify-content: space-between;
    background-color: rgb(40,40,40);
}

.footer-container-left {
    display: flex;
    align-items: center;
    flex-basis: 25%;
}

.footer-container-left .icon-footer {
    display: flex;
    flex-direction: column;
}

.footer-container-left .icon-footer i {
    margin: 3px 0;
}

.footer-container-left .img-footer img {
    width: 3rem;
}

.footer-container-left > * {
    padding: 0 .5rem;
    color: var(--primary-col);
}

.brano-title {
    display: block
}

.footer-container-middle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

.play-container {
    display: flex;
    position: relative;
    align-items: center;
    padding: 5px;
    width: 80%;
    justify-content: center;
}

.numbers {
    padding: 0 5px;
    color: white;
}

.footer-container-right {
    display: flex;
    align-items: center;
    flex-basis: 25%;
    justify-content: flex-end;
    padding-right: .5em;
}

.footer-container-right .right-icons-container button {
    color: white;
    background-color:rgb(40,40,40);
    margin: 0 5px;
    border: none;
    display: inline-block;
}

.footer-container-middle .buttons-container button  {
    color: white;
    background-color:rgb(40,40,40);
    margin: 0 10px;
    border: none;
    display: inline-block;
    font-size: 15px;
}

.bars-container {
    position: relative;
    display: flex;
}

.play-bar {
    width: 80%;
}

.grey-bar {
    width: 70px;
    height: .3rem;
    border: none;
    background-color: var(--primary-col);
}

.longer {
    width: 100%;
}

.white-bar {
    width: 25%;
    height: .3rem;
    border: none;
    background-color: white;
    position: absolute;
    top: 0;
    left: 0;
}

.white-dot {
    opacity: 0;
    padding: 8px;
    color: white;
    position: absolute;
    top: -8px;
    left: 25%;
    border-radius: 50%;
}

.smaller {
    padding: 5px;
    top: -5px;
}

/* HOVER EFFECTS */

.btn-upgrade:hover {
    transform: scale(1.2) translateX(-10px) translateY(10px);
}

.sidebar ul li:hover a,
.sidebar-container-bottom .mini-sidebar-container:hover a {
    color: white;
}

.sidebar ul .playlist-button:hover i{
    background-color: white;
}
.corner-footer .brano-title a:hover{
    color: white;
}

.corner-footer .icon-footer i:hover{
    color: white;
    cursor: pointer;
}

.bars-container .white-bar:hover + .white-dot {
    opacity: 1;
}
.bars-container .white-bar:hover {
    background-color: greenyellow;
}

.buttons-container button:hover {
    transform: scale(1.3);
}

.card .img-card-container:hover {
    opacity: .6;
}

.card .img-card-container:hover i {
    display: block;
}

